--- a/Activity3.html
+++ b/Activity3.html
@@ -16,14 +16,34 @@
 			text-align: center;
 		}
 		div{
-			background-color: 71EEB8;
+			background-color: #87CEFA;
 			padding: 10px;
 			margin: 10px;
 			border: 4px solid black;
 		}
+		a:link {
+			color: green;
+			background-color: transparent;
+			text-decoration: none;
+		}
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
 	</style>
 </head>
-<body>
+<body bgcolor="#008080">
 <h1>Welcome to the page</h1>
 <div>
 	<p>Match Summary <a href="Activity1.html">Click Here.</a> </p>
